@@ -4,6 +4,9 @@
 
 --------------------------------------------------------------------------
   v.3.4-Alpha2 
+	- Moved Quick search to the top, right appears on every page
+	- Fixed an issue with reading id3tags causing a uncaught exception
+		due to direct reference to getid3() 
   	- Added check on clean to see if Root path is readable, if not
 		stop clean (mount point failures) 
   	- Fixed now playing, hopefully once and for all
